tests/corpus/negatives/template-without-model.ts
import { exec } from "node:child_process";

const name = "world";
const command = `echo ${name}`;
exec(command);
